added markdown to duplicate removal notebook and updated README, TODO: add markdown to additional notebooks

--- a/duplicate_image_remove.ipynb
+++ b/duplicate_image_remove.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import hashlib\n",
-    "from scipy.misc import imread, imresize, imshow #  have to downgrade scipy to use 1.1.0 only\n",
+    "from scipy.misc import imread, imresize, imshow # have to downgrade scipy to use 1.1.0 only\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "%matplotlib inline\n",
@@ -19,7 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Removing Duplicate Images Using Hashing"
+    "# Removing Duplicate Images Using Hashing\n",
+    "\n",
+    "To give our model the best chance of not over fitting, this code was used to make sure there was no overlap in images between train/validations/test. This was necessary due to the scarcity of the 'distanced' class in the collected data. This code is not our own and was provided from this article https://medium.com/@urvisoni/removing-duplicate-images-through-python-23c5fdc7479e with thanks to the author Urvi Soni  "
    ]
   },
   {
